<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingBottom="@dimen/list_layout_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Introduction to Algorithm" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price" />

            <TextView
                android:id="@+id/list_book_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copies" />

            <TextView
                android:id="@+id/list_book_copies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                tools:text="50" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/cart_button"
            android:contentDescription="@string/cart"
            android:layout_gravity="center"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
